navbar spacing added to prevent overlap of fixed navbar onto page content

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,12 @@
+/* Styling for navbar spacing*/
+body {
+  padding-top: 60px;
+}
+@media (max-width: 979px) {
+  body {
+    padding-top: 0px;
+  }
+}
 #map {
 height: 600px;
 }
